fix: terms bullets alignment
Former-commit-id: 8dd964828f8648241210ab68beb5f323cd90b0fc

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1084,7 +1084,7 @@ header {
         height: 40px;
         border: 1px solid #ccc;
         border-radius: 100%;
-        line-height: 41px;
+        line-height: 37px;
         color: #bbb;
         font-family: "Raleway"; }
   #terms #code-of-conduct {
